--- a/styles/style.scss
+++ b/styles/style.scss
@@ -21,7 +21,7 @@ body {
 
 .overlay.active {
   display: inline;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
